tests/data/placebo/test_security_group_config_source/config.GetResourceConfigHistory_1.json
{
    "status_code": 200, 
    "data": {
        "configurationItems": [
            {
                "configurationItemCaptureTime": {
                    "hour": 6, 
                    "__class__": "datetime", 
                    "month": 8, 
                    "second": 58, 
                    "microsecond": 830000, 
                    "year": 2017, 
                    "day": 10, 
                    "minute": 50
                }, 
                "relationships": [
                    {
                        "resourceType": "AWS::EC2::VPC", 
                        "resourceId": "vpc-d2d616b5", 
                        "relationshipName": "Is contained in Vpc"
                    }
                ], 
                "availabilityZone": "Not Applicable", 
                "awsRegion": "us-east-1", 
                "tags": {
                    "Name": "", 
                    "c7n-test-tag": "c7n-test-val"
                }, 
                "resourceType": "AWS::EC2::SecurityGroup", 
                "resourceId": "sg-6c7fa917", 
                "configurationStateId": "1502362258830", 
                "relatedEvents": [
                    "dc38f4d3-e652-4d54-9438-52821e74cf7c"
                ], 
                "arn": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-6c7fa917", 
                "version": "1.2", 
                "configurationItemMD5Hash": "4e51d919fa402efb191edd0f11c29980", 
                "supplementaryConfiguration": {}, 
                "resourceName": "default", 
                "configuration": "{\"description\":\"default VPC security group\",\"groupName\":\"default\",\"ipPermissions\":[{\"ipProtocol\":\"-1\",\"ipv6Ranges\":[],\"prefixListIds\":[],\"userIdGroupPairs\":[{\"groupId\":\"sg-6c7fa917\",\"userId\":\"644160558196\"}],\"ipv4Ranges\":[{\"cidrIp\":\"108.56.181.242/32\"}],\"ipRanges\":[\"108.56.181.242/32\"]}],\"ownerId\":\"644160558196\",\"groupId\":\"sg-6c7fa917\",\"ipPermissionsEgress\":[{\"ipProtocol\":\"-1\",\"ipv6Ranges\":[],\"prefixListIds\ [...]
                "configurationItemStatus": "OK", 
                "accountId": "644160558196"
            }
        ], 
        "nextToken": "eyJlbmNyeXB0ZWREYXRhIjpbLTM2LDMzLDExNSw3LDczLC05OSwtNjMsLTI2LDg0LC0xNiw3MCw0Niw4OCwtOCwtMTksMTAzLC0xMDgsNjIsMjEsLTExNCwtMTA0LC0yMCw4MiwtODYsLTE1LDgxLDY5LDEwMSw3MSw4OSwtNTIsNDgsLTg2LDU4LDUzLDEwNyw2LDExNCwtOCw3OSw5NSwtMTE0LDY2LDQ2LDYxLC01OCw2MiwzMiwtNDMsNzUsLTU0LC01OCwtMTEwLDEsLTI1LC04Miw1NCw3MywzNywtMTI2LC01OCwtNzUsMzYsLTk5LDQzLDEwNCwxMTcsNzgsNjksLTE2LC0yMiwtNzYsMjAsLTExMywtOTEsOTYsLTM1LDI3LDExNywtMTAwLC01MSwxMTUsNDUsLTYyLC04Miw2OSwxMTAsOTgsLTEyMCwtODIsNzIsMTEwLC0xMDksLTk0LD [...]
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "2fb087b9-8350-11e7-bb70-11370d223f3a", 
            "HTTPHeaders": {
                "x-amzn-requestid": "2fb087b9-8350-11e7-bb70-11370d223f3a", 
                "date": "Thu, 17 Aug 2017 13:30:06 GMT", 
                "content-length": "2443", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
