tests/data/placebo/test_security_group_config_source/config.SelectResourceConfig_1.json
{
  "status_code": 200,
  "data": {
    "Results": [
      "{\"configuration\":{\"groupName\":\"default\",\"groupId\":\"sg-6c7fa917\",\"vpcId\":\"vpc-d2d616b5\",\"ipPermissionsEgress\":[{\"ipRanges\":[\"0.0.0.0/0\"],\"prefixListIds\":[],\"userIdGroupPairs\":[],\"ipProtocol\":\"-1\",\"ipv4Ranges\":[{\"cidrIp\":\"0.0.0.0/0\"}],\"ipv6Ranges\":[]}],\"description\":\"default VPC security group\",\"ownerId\":\"644160558196\",\"ipPermissions\":[{\"ipRanges\":[\"108.56.181.242/32\"],\"prefixListIds\":[],\"userIdGroupPairs\":[{\"groupId\":\"sg-6c7fa917\",\ [...]
    ],
    "QueryInfo": {
      "SelectFields": [
        {
          "Name": "configuration"
        },
        {
          "Name": "supplementaryConfiguration"
        }
      ]
    },
    "ResponseMetadata": {}
  }
}
