tests/data/placebo/test_security_group_config_source/ec2.DescribeVpcs_1.json
{
    "status_code": 200, 
    "data": {
        "Vpcs": [
            {
                "VpcId": "vpc-29e0314f", 
                "InstanceTenancy": "default", 
                "State": "available", 
                "DhcpOptionsId": "dopt-24ff1940", 
                "CidrBlock": "10.42.0.0/16", 
                "IsDefault": false
            }, 
            {
                "VpcId": "vpc-72885e14", 
                "InstanceTenancy": "default", 
                "State": "available", 
                "DhcpOptionsId": "dopt-24ff1940", 
                "CidrBlock": "10.42.0.0/16", 
                "IsDefault": false
            }, 
            {
                "VpcId": "vpc-d2d616b5", 
                "InstanceTenancy": "default", 
                "State": "available", 
                "DhcpOptionsId": "dopt-24ff1940", 
                "CidrBlock": "172.31.0.0/16", 
                "IsDefault": true
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "26ce68bb-5e02-4746-a974-08a17de8575c", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Fri, 03 Feb 2017 01:42:45 GMT"
            }
        }
    }
}
