tests/data/placebo/test_security_group_config_source/tagging.GetResources_1.json
{
    "status_code": 200, 
    "data": {
        "PaginationToken": "", 
        "ResourceTagMappingList": [
            {
                "ResourceARN": "arn:aws:ec2:us-east-1:644160558196:security-group/sg-6c7fa917", 
                "Tags": [
                    {
                        "Value": "", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "c7n-test-val", 
                        "Key": "c7n-test-tag"
                    }
                ]
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "2f45def0-8350-11e7-9be3-817126018688", 
            "HTTPHeaders": {
                "x-amzn-requestid": "2f45def0-8350-11e7-9be3-817126018688", 
                "date": "Thu, 17 Aug 2017 13:30:06 GMT", 
                "content-length": "210", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
